# Document-Conversion-Tool

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
config/: config.yaml  models.yaml  prompts.yaml
src/docconv/: __init__.py
src/docconv/ai/: __init__.py  anthropic_client.py  base.py  model_manager.py  openai_compatible_client.py
src/docconv/cli/: __init__.py  main.py
src/docconv/core/: __init__.py  converter.py  page_pipeline.py  types.py
src/docconv/infra/: __init__.py  cache_manager.py  logger.py  metrics.py  state_manager.py
src/docconv/output/: __init__.py  markdown_writer.py  report_writer.py
src/docconv/parser/: __init__.py  errors.py  pdf_parser.py
src/docconv/processor/: __init__.py  image_analyzer.py  image_preprocessor.py  mermaid_converter.py  page_classifier.py  table_converter.py  text_processor.py
src/docconv/validator/: __init__.py  content_validator.py  mermaid_validator.py  table_validator.py
tests/: test_cache_manager.py  test_core_types.py  test_metrics.py  test_page_classifier.py  test_parser.py  test_state_manager.py  test_text_processor.py  test_validators.py
