[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "docconv"
version = "1.0.0"
description = "智能化 PDF 文档转换器 (PDF → Markdown)"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.23",
    "Pillow>=10.0",
    "anthropic>=0.39",
    "openai>=1.0",
    "click>=8.1",
    "PyYAML>=6.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
docconv = "docconv.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
